--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -43,7 +43,7 @@
 
 body {
     font-family: var(--paragraph-font);
-    max-width: 960;
+    max-width: 960px;
     padding: 20px;
     background-color: var(--accent1-color);
 }
