--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -48,7 +48,7 @@ body {
     background-color: var(--accent1-color);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4 {
     font-family: 'Amita',serif;
     color: black;
     text-align: center;
