--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,19 +5,22 @@
 }
 
 nav {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 10px;
+    justify-items: center;
     background-color: steelblue;
-    padding: 10px;
+    padding: 5% ;
     align-items: center;
 }
 
 nav>a {
     color: white;
     display: block;
-    padding: 20px;
+    padding-top: 20px ;
+    padding-bottom: 20px;
     font-weight: 700;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,7 +33,7 @@ footer {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
 }
 
@@ -58,18 +61,21 @@ p {
 main {
     max-width: 840px;
     margin: auto;
-    ;
 
 }
 
-main>ul {
-    position: relative;
-    left: 50px;
+
+
+
+.box {
+    display: grid;
+    grid-column: 1fr;
+    justify-items: center;
+    gap: 10px;
 }
 
 aside {
-    position: relative;
-    bottom: 2rem;
+
     grid-column: 1 / 2;
     grid-row: 1;
 
@@ -77,22 +83,16 @@ aside {
 
 aside>h2 {
     margin-top: 100px;
-    text-align: center;
+
 }
 
 aside>img {
     max-width: 200px;
-    min-height: 100px;
-    position: relative;
-    left: 100px;
-
-
+    min-height: 50px;
 
 }
 
 aside>p {
-
-
     max-width: 840px;
 
 
@@ -101,10 +101,10 @@ aside>p {
 
 footer {
     margin-top: 50px;
-    border-top: 1px steelblue;
+    border-top: 2px solid black;
+    padding-top: 20px;
     text-align: center;
     margin-bottom: 50px;
 }
 
 /* Class Selectors */
-
