--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,11 +5,9 @@
 }
 
 nav {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px , 1fr));
-    column-gap: 10px;
-    justify-items: center;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     background-color: steelblue;
     padding: 5% ;
     align-items: center;
@@ -17,12 +15,13 @@ nav {
 
 nav>a {
     color: white;
+    text-align: center;
     display: block;
     min-width: 100px;
     padding-top: 20px ;
     padding-bottom: 20px;
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 
