--- a/wwr/styles/about.css
+++ b/wwr/styles/about.css
@@ -2,7 +2,7 @@
 
 
 * {
-    padding: 0;
+
     margin: 0;
 }
 
@@ -10,150 +10,192 @@
 
     --primary-color: #ff9f1c;
 }
+
 :root {
     --secondary-color: #000000
 }
+
 :root {
     --accent1-color: #2ec4b6
 }
+
 :root {
     --accent2-color: #000080
-
 }
+
 :root {
     --heading-font: 'Amita', serif
-    
 }
 
 :root {
     --paragraph-font: 'Saira Semi Condensed', sans-serif
-
 }
 
 :root {
     --nav-background-color: #2ec4b6
 }
 
-:root{
+:root {
     --nav-link-color: #000000
 }
 
 :root {
     --nav-hover-link-color: #000000
 }
+
 :root {
     --nav-hover-background-color: #000080
 }
-    
+
+body {
+
+    display: grid;
+    row-gap: 20px;
+    grid-template-columns: 1fr;
+}
+
 
 header {
-    background-color: var(--primary-color);
     width: 100%;
-    
+    display: grid;
+   
+    justify-content: space-around;
+    align-items: center;
+    justify-items: center;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    background-color: var(--primary-color);
+    padding: 10px 0;
+
 }
 
-
-header img {
-    position: relative;
-    left: 10rem;
-    padding: 20px;
-    display: inline-block;
-    
-}
-
-header nav {
-    padding: 20px;
+nav {
     display: flex;
-    justify-content: space-between;
-    position: absolute;
-    left: 40rem;
-    top: 50px;
-    
+    flex-wrap: wrap;
+    padding: 20px;
 }
+
+nav>a {
+    min-width: 100px;
+    text-align: center;
+    border: 2px solid #2ec4b6;
+}
+
+
+header>img {
+
+    min-width: 100px;
+}
+
+
+
+
+
+
+
+
+
 
 body {
     font-family: var(--paragraph-font);
 }
-h1, h2, h3, h4 {
+
+h1,
+h2,
+h3,
+h4 {
     font-family: var(--heading-font);
 }
 
-a {
-    padding: 20px;
-}
 
-.hero {
-    margin: 4rem;
-}
-div img {
+main>img {
+   
     width: 100%;
     height: auto;
-    padding: 20px;
-
-}
-
-section h2 {
-    margin-top: 30px;
-    position: relative;
-    top: 40px;
     
 }
-div h1 {
+
+
+
+
+h1 {
+    width: 90%;
     color: var(--accent2-color);
-    position: absolute;
-    left: 15%;
-    top: 20rem;
+    grid-column: 1 /3;
+    grid-row: 1;
+    background-color: rgba(23, 50, 50, 0.9);
     margin: auto;
-    padding-left: 13rem;
-    background-color: rgba(23, 50, 50, 0.7);
-    font-size: 60px;
-    width: 70%;
-    box-sizing: border-box;
+    text-align: center;
+    font-size: 50px;
 
 }
-.logo{height: 70px;width: 70px;border-radius: 50%;}
 
-#small {
-    width: 15rem;
-    height: 15rem;
-    padding: 0;
-    position: absolute;
-    top: 28rem;
-    left: 56rem;
-    border:  5px solid white;
+
+
+div>img {
+    padding: 10px;
+    max-width: 15%;
+    min-width: 150px;
+
 }
 
-#special {
-    color: var(--secondary-color);
-    font-size: 30px;
-    position: absolute;
-    top: 27rem;
-    width: 60%;
-    right: 23rem;
-    background-color: rgba(236, 233, 231, 0.7);
-}
-
-section div img {
-    margin-top: -20px;
-    margin: 5rem;
-    width: 83%;
-    position: relative;
-    left: 13px;
-    
-}
-
-section p {
-    width: 70%;
+section>p {
+    max-width: 840px;
     margin: auto;
-    font-size: 1.8rem;
-    padding: 15px;
-    position: relative;
-    top: 25px;
 }
+
+
 
 h2 {
-    font-size: 30px;
+    padding-top: 20px;
     width: 100%;
     text-align: center;
     color: var(--accent2-color);
+}
+
+.Adventure {
+    display: flex;
+    padding: 20px;
+    flex-wrap: wrap;
+    max-width: 90%;
+    justify-content: space-evenly;
+    margin: auto;
+    align-content: center;
+}
+
+.divider {
+    background-image: url("../images/hero-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+    row-gap: 30px;
+    grid-template-columns: 1fr;
+    padding: 50px 0;
+
+}
+
+#small {
+    
+    min-width: 150px;
+    height: 200px;
+    order: 1;
+    padding: 0 ;
+    border: 2px solid #2ec4b6 ;
+
+
+}
+
+.article {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+article > p {
+    font-weight: bold;
+    background-color: #2ec4b6;
+    padding: 20px;
+    max-width: 750px;
 }
