--- a/wwr/styles/about.css
+++ b/wwr/styles/about.css
@@ -119,14 +119,14 @@ main>img {
 
 
 h1 {
-    width: 90%;
+    max-width: 80%;
     color: var(--accent2-color);
     grid-column: 1 /3;
     grid-row: 1;
     background-color: rgba(23, 50, 50, 0.9);
     margin: auto;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
 
 }
 
@@ -140,9 +140,9 @@ div>img {
 }
 
 section>p {
-    max-width: 840px;
-    padding: 0 10px;
-    margin: auto;
+    
+    padding: 10px;
+    
 }
 
 
@@ -158,7 +158,7 @@ h2 {
     display: flex;
     padding: 20px;
     flex-wrap: wrap;
-    max-width: 90%;
+    max-width: 70%;
     justify-content: space-evenly;
     margin: auto;
     align-content: center;
@@ -177,7 +177,7 @@ h2 {
 
 #small {
     
-    min-width: 150px;
+    min-width: 25%;
     height: 200px;
     order: 1;
     padding: 0 ;
@@ -187,7 +187,7 @@ h2 {
 }
 
 .article {
-    width: 90%;
+    max-width: 80%;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -197,6 +197,6 @@ h2 {
 article > p {
     font-weight: bold;
     background-color: #2ec4b6;
-    padding: 20px;
+    padding: 20px 5%;
     max-width: 750px;
 }
