--- a/wwr/styles/about.css
+++ b/wwr/styles/about.css
@@ -62,7 +62,7 @@ header {
     justify-content: space-around;
     align-items: center;
     justify-items: center;
-    gap: 10px;
+    row-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     background-color: var(--primary-color);
     padding: 10px 0;
