--- a/wwr/styles/about.css
+++ b/wwr/styles/about.css
@@ -123,7 +123,7 @@ h1 {
     color: var(--accent2-color);
     grid-column: 1 /3;
     grid-row: 1;
-    background-color: rgba(23, 50, 50, 0.9);
+    background-color: #2ec4b6;
     margin: auto;
     text-align: center;
     font-size: 40px;
